05_cert-manager/deployment/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - ingress.mag.yt
      secretName: hello-world-tls
  rules:
  - host: ingress.mag.yt
    http:
      paths:
      - backend:
          serviceName: hello-world1-svc
          servicePort: 80
